--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<nav class="navbar  navbar-dark  bg-primary">
-  <span class="navbar-brand mb-0 h1">Root</span>
-</nav>
+<div class="container">
+  <nav class="navbar  navbar-dark  bg-primary">
+    <span class="navbar-brand mb-0 h1">Root</span>
+  </nav>
+  <app-factory></app-factory>
+</div>
