--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,11 @@
   <nav class="navbar  navbar-dark  bg-primary">
     <span class="navbar-brand mb-0 h1">Root</span>
   </nav>
-  <app-factory></app-factory>
+
+  <div>
+    <app-factory></app-factory>
+  </div>
+  <div class="row">
+      <div class="col-6"><button type="button" class="btn btn-success float-right">Add Factory</button></div>
+    </div>
 </div>
