--- a/src/app/factory/factory.component.html
+++ b/src/app/factory/factory.component.html
@@ -1,11 +1,17 @@
 
     <div *ngFor="let factory of factories" class="ml-4" class="factory">
         <div class="row">
-          <div class="col-3">
+          <div class="col-2">
             <h4>----{{factory?.title}}</h4>
           </div>
-          <div class="col-3 text-center">
-            <span class="badge badge-secondary float-right" > {{factory?.min}} : {{factory?.max}}</span>
+          <div class="col-2 text-center">
+            <span class="badge badge-secondary" > {{factory?.min}} : {{factory?.max}}</span>   
+          </div>
+              <div class="col-1">
+                  <a routerLink="/seller/product/new" class="float-right"><i class="fas fa-edit"></i></a>
+              </div>
+          <div class="col-1">
+              <a   routerLink="/seller/product/new" class="float-right"><i class="fas fa-trash-alt"></i></a>
           </div>
         </div>
         <div *ngFor="let child of factory?.children" >
