--- a/src/app/factory/factory.component.html
+++ b/src/app/factory/factory.component.html
@@ -1,20 +1,65 @@
+<div *ngFor="let factory of factories" class="ml-4" class="factory">
+  <div class="row">
+    <div class="col-2">
+      <h4>----{{factory?.title}}</h4>
+    </div>
+    <div class="col-2 text-center">
+      <span class="badge badge-secondary"> {{factory?.min}} : {{factory?.max}}</span>
+    </div>
+    <div class="col-2 ">
+      <button type="button" class="btn btn-primary" (click)="open(content, factory)"><i
+          class="fas fa-edit"></i></button>
+      <button type="button" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
+    </div>
+  </div>
+  <div *ngFor="let child of factory?.children">
+    <div class="child">----{{child}}</div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-6"><button type="button" class="btn btn-success float-right" (click)="open(content, null)">Add
+      Factory</button></div>
+</div>
 
-    <div *ngFor="let factory of factories" class="ml-4" class="factory">
+<!-- Modal -->
+<ng-template #content let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title" *ngIf="selectedFactory">Update Factory</h4>
+    <h4 class="modal-title" id="modal-basic-title" *ngIf="!selectedFactory">Add Factory</h4>
+    <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form  [formGroup]="factoryForm"  (submit)="saveFactory()">
+      <div class="form-group">
+        <label>Factory Title</label>
+        <input name="factoryTitle" class="form-control" type="text"  formControlName="title" required />
+      </div>
+      <div class="form-group">
+        <label>Amount To Generate</label>
+        <select name="childAmount" class="form-control" required formControlName="amount">
+          <option *ngFor="let amount of amountArray; let i = index" value="{{amount}}"  >
+            {{amount}}
+          </option>
+        </select>
+      </div>
+      <div class="form-group">
         <div class="row">
-          <div class="col-2">
-            <h4>----{{factory?.title}}</h4>
+          <div class="col-6">
+            <label>Min</label>
+            <input name="childMin" class="form-control" type="number" required formControlName="min"/>
           </div>
-          <div class="col-2 text-center">
-            <span class="badge badge-secondary" > {{factory?.min}} : {{factory?.max}}</span>   
+          <div class="col-6">
+            <label>Max</label>
+            <input class="form-control" type="number" required formControlName="max"/>
           </div>
-              <div class="col-1">
-                  <a routerLink="/seller/product/new" class="float-right"><i class="fas fa-edit"></i></a>
-              </div>
-          <div class="col-1">
-              <a   routerLink="/seller/product/new" class="float-right"><i class="fas fa-trash-alt"></i></a>
-          </div>
-        </div>
-        <div *ngFor="let child of factory?.children" >
-            <div class="child">----{{child}}</div>
         </div>
       </div>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-outline-dark" >Save</button>
+      </div>
+    </form>
+  </div>
+
+</ng-template>
