--- a/src/app/factory/factory.component.html
+++ b/src/app/factory/factory.component.html
@@ -1,6 +1,6 @@
 <div *ngFor="let factory of factories; let index = index " class="ml-4" class="factory">
   <div class="row">
-    <div class="col-3">
+    <div class="col-4">
 
       —— <b id="{{ 'label_' + index}}">{{factory.title}} </b><button id="{{'edit_'+index}}" class="btn btn-link"
         (click)="editName(index)"><i class="fas fa-edit"></i></button>
@@ -14,8 +14,8 @@
 
     <!-- action -->
     <div class="col-2 mt">
-      <button type="button" class="btn btn-primary mr-1" (click)="open(content, index)"><i class="fas fa-cog "></i>
-      </button>
+      <button type="button" class="btn btn-primary mr-1" (click)="open(content, index)"><i class="fas fa-cog "></i> </button>
+     
       <button type="button" class="btn btn-danger" (click)="delete(factory)"><i class="fas fa-trash-alt"></i></button>
     </div>
   </div>
@@ -24,7 +24,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-6"><button type="button" class="btn btn-success float-right" (click)="open(content, null)">Add
+  <div class="col-6"><button type="button" class="btn btn-success ml-4" (click)="open(content, null)">Add
       Factory</button></div>
 </div>
 
@@ -66,7 +66,7 @@
         <div *ngIf="factoryForm.errors?.range" class="alert alert-danger" role="alert">{{factoryForm.errors.range}}</div>
       </div>
       <div class="modal-footer">
-        <button type="submit" [disabled]="!factoryForm.valid" class="btn btn-success">Save</button>
+        <button type="submit" [disabled]="!factoryForm.valid" class="btn btn-success">Regenerate</button>
       </div>
     </form>
   </div>
