--- a/src/app/factory/factory.component.html
+++ b/src/app/factory/factory.component.html
@@ -66,7 +66,7 @@
         <div *ngIf="factoryForm.errors?.range" class="alert alert-danger" role="alert">{{factoryForm.errors.range}}</div>
       </div>
       <div class="modal-footer">
-        <button type="submit" [disabled]="!factoryForm.valid" class="btn btn-success">Regenerate</button>
+        <button type="submit" [disabled]="!factoryForm.valid" class="btn btn-success">Generate</button>
       </div>
     </form>
   </div>
